-Adding clear button

--- a/src/main/resources/com/example/monwedcalc/CalcWindow.fxml
+++ b/src/main/resources/com/example/monwedcalc/CalcWindow.fxml
@@ -8,7 +8,7 @@
    <children>
       <VBox layoutX="-1.0" prefHeight="402.0" prefWidth="600.0">
          <children>
-            <TextField fx:id="numberField" prefHeight="26.0" prefWidth="43.0" />
+            <TextField fx:id="numberField" editable="false" prefHeight="26.0" prefWidth="597.0" />
             <GridPane prefHeight="378.0" prefWidth="600.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -34,6 +34,46 @@
                      </font>
                   </Button>
                   <Button mnemonicParsing="false" onAction="#numberButtonPressed" prefHeight="96.0" prefWidth="150.0" text="9" GridPane.columnIndex="2">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#numberButtonPressed" prefHeight="96.0" prefWidth="152.0" text="4" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#numberButtonPressed" prefHeight="97.0" prefWidth="151.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#numberButtonPressed" prefHeight="99.0" prefWidth="155.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#numberButtonPressed" prefHeight="96.0" prefWidth="155.0" text="1" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#numberButtonPressed" prefHeight="98.0" prefWidth="155.0" text="2" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#numberButtonPressed" prefHeight="101.0" prefWidth="154.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#numberButtonPressed" prefHeight="94.0" prefWidth="158.0" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="96.0" prefWidth="159.0" text="Clear" GridPane.rowIndex="3">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
