--- a/src/main/resources/com/example/monwedcalc/CalcWindow.fxml
+++ b/src/main/resources/com/example/monwedcalc/CalcWindow.fxml
@@ -73,7 +73,17 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="96.0" prefWidth="159.0" text="Clear" GridPane.rowIndex="3">
+                  <Button mnemonicParsing="false" onAction="#clearButtonPressed" prefHeight="96.0" prefWidth="159.0" text="Clear" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#equalPressed" prefHeight="97.0" prefWidth="154.0" text="=" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#plusPressed" prefHeight="103.0" prefWidth="159.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="3">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
