--- a/src/main/resources/com/example/monwedcalc/CalcWindow.fxml
+++ b/src/main/resources/com/example/monwedcalc/CalcWindow.fxml
@@ -88,17 +88,17 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="97.0" prefWidth="162.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                  <Button mnemonicParsing="false" onAction="#subPressed" prefHeight="97.0" prefWidth="162.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="99.0" prefWidth="169.0" text="*" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                  <Button mnemonicParsing="false" onAction="#multiplyPressed" prefHeight="99.0" prefWidth="169.0" text="*" GridPane.columnIndex="3" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="107.0" prefWidth="180.0" text="/" GridPane.columnIndex="3">
+                  <Button mnemonicParsing="false" onAction="#dividePressed" prefHeight="107.0" prefWidth="180.0" text="/" GridPane.columnIndex="3">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
